--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-owl-carousel": "^2.3.3",
     "react-owl-carousel2": "^0.3.0",
     "react-scripts": "5.0.0",
+    "reactjs-popup": "^2.0.5",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.2"
   },
